risolti code smells